--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="load_list">Load list</string>
     <string name="load_book">Load Book</string>
     <string name="saved_books_list">Saved books list</string>
+    <string name="pleasewait">Please wait</string>
 </resources>
