--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="load_book">Load Book</string>
     <string name="saved_books_list">Saved books list</string>
     <string name="pleasewait">Please wait</string>
+    <string name="no_intenet">No Internet connection available.   You can read loaded books</string>
 </resources>
