--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Pocket Book</string>
+    <string name="app_name">Lib.ru reader</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
     <string name="clear_list">Clear list</string>
