--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,8 +7,8 @@
     <string name="no_intenet">"Интернет недоступен. "</string>
     <string name="pleasewait">Подождите</string>
     <string name="saved_books_list">Книжная полка</string>
-    <string name="sendTo">Отправить</string>
-    <string name="send_a_link_to_book">Отправить ссылку на книгу</string>
+    <string name="sendTo">Поделиться ссылкой</string>
+    <string name="send_a_link_to_book">Поделиться ссылкой на книгу</string>
     <string name="settings">Настройки</string>
     <string name="about">О программе</string>
 </resources>
